# demdem

./: .gitignore  LICENSE  docker-compose-dev.yml  init-dev-databases.sh
.github/workflows/: ci.yml
services/backend/expenses/: .gitignore  .scalafix.conf  .scalafmt.conf  build.sbt
services/backend/expenses/project/: Dependencies.scala  plugins.sbt
services/backend/mood/: .scalafmt.conf  Dockerfile  Dockerfile.dev  build.mill  docker-compose.yml
services/backend/mood-rs/: .env  Cargo.toml  Dockerfile  tests.http
services/backend/mood-rs/migrations/2026-04-18-191630-0000_create_moods/: down.sql  up.sql
services/backend/mood-rs/migrations/2026-05-24-075638-0000_change_timestamp_to_date/: down.sql  up.sql
services/backend/mood-rs/src/: endpoints.rs  main.rs  models.rs  schema.rs  state.rs
services/backend/mood/api/src/endpoints/: GetMoodRecordsEndpoint.scala
services/backend/mood/app/api/src/: Main.scala
services/backend/mood/app/db/src/: Conversions.scala  Database.scala  Migration.scala  Repository.scala  Schema.scala
services/backend/mood/app/domain/src/: domain.scala
services/backend/mood/domain/src/: domain.scala
services/frontend/demdemfront/: Dockerfile.dev  README.md  angular.json  compose.yaml  package-lock.json  package.json
services/frontend/demdemfront/api/: docs.yaml
services/frontend/demdemfront/src/: index.html  main.ts
services/frontend/demdemfront/src/app/: app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
services/frontend/demdemfront/src/app/api/: api.base.service.ts  mood-data.service.ts
(+21 files in other folders)
